--- a/src/global.css
+++ b/src/global.css
@@ -24,20 +24,7 @@ body {
   padding: 0 17.5rem;
   box-sizing: border-box;
   font-size: 1.6rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-a {
-  color: rgb(0, 100, 200);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-a:visited {
-  color: rgb(0, 80, 160);
+  font-family: "League Spartan", "Helvetica Neue", sans-serif;
 }
 
 label {
@@ -48,7 +35,7 @@ input,
 button,
 select,
 textarea {
-  font-family: inherit;
+  font-family: inherit; /*  */
   font-size: inherit;
   padding: 0.4em;
   margin: 0 0 0.5em 0;
@@ -71,7 +58,7 @@ button {
   outline: none;
 }
 
-button:disabled {
+/* button:disabled {
   color: #999;
 }
 
@@ -81,4 +68,4 @@ button:not(:disabled):active {
 
 button:focus {
   border-color: #666;
-}
+} */
